# motor-module-autoencoder

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  ae_motor_module.py  nmf_motor_module.py  training.py
